# score-addon-ultraleap

./: .gitmodules  CMakeLists.txt  release.sh  score_addon_ultraleap.cpp  score_addon_ultraleap.hpp  ultraleap.cmake
UltraLeap/: LeapmotionDevice.cpp  LeapmotionProtocolFactory.cpp  LeapmotionProtocolFactory.hpp  LeapmotionSpecificSettings.hpp  LeapmotionSpecificSettingsSerialization.cpp  Protocol.cpp  Protocol.hpp  UltraLeap.hpp  UltraLeapModel.cpp  UltraLeapModel.hpp  UltraLeapUi.hpp
